the canvas should no longer look blurry

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -491,6 +491,10 @@ body {
   position: relative;
 }
 
+.stage-container canvas {
+  image-rendering: auto;
+}
+
 .blockly-area {
   position: relative;
 }
